apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
